--- a/docs/src/assets/styles/core/_root.scss
+++ b/docs/src/assets/styles/core/_root.scss
@@ -1,8 +1,17 @@
 body {
+  --text-color: #{primary-color(700)};
   background-color: primary-color(50);
   transition: background-color 0.2s ease-in-out;
 
-  @include dark-mode {
+  @media (prefers-color-scheme: dark) {
+    &:not(.light-mode) {
+      --text-color: #{primary-color(200)};
+      background-color: primary-color(950);
+    }
+  }
+
+  &.dark-mode {
+    --text-color: #{primary-color(200)};
     background-color: primary-color(950);
   }
 }
