--- a/docs/src/assets/styles/variables/_mixins.scss
+++ b/docs/src/assets/styles/variables/_mixins.scss
@@ -87,10 +87,12 @@
 
 @mixin dark-mode {
   @media (prefers-color-scheme: dark) {
-    @content;
+    body:not(.light-mode) & {
+      @content;
+    }
   }
 
-  .dark-mode & {
+  body.dark-mode & {
     @content;
   }
 }
